Fix chrome horizontal scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@400;700&display=swap");
 
 html {
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
   width: 100%;
 }
 
